# qianli_vision

./: .gitignore  CMakeLists.txt  readme.md
calibration/: README.md  calibrate_camera.cpp  calibrate_handeye.cpp  calibrate_robotworld_handeye.cpp  capture.cpp  split_video.cpp
configs/: README.md  calibration.yaml  camera.yaml  camera_detect.yaml  demo.yaml  hero.yaml  minimum_vision_system.yaml  (+1 more)
tasks/auto_aim/: CMakeLists.txt
tasks/auto_aim/aimer/: aimer.cpp  aimer.hpp
tasks/auto_aim/armor/: armor.cpp  armor.hpp
tasks/auto_aim/classifier/: classifier.hpp
tasks/auto_aim/detector/: detector.cpp  detector.hpp
tasks/auto_aim/multithread/: commandgener.cpp  commandgener.hpp  mt_detector.cpp  mt_detector.hpp
tasks/auto_aim/planner/: planner.cpp  planner.hpp
tasks/auto_aim/shooter/: shooter.cpp  shooter.hpp
tasks/auto_aim/solver/: solver.cpp  solver.hpp
tasks/auto_aim/tracker/: tracker.cpp  tracker.hpp
tasks/auto_aim/voter/: voter.hpp
tasks/auto_aim/yolos/: yolo.cpp  yolo.hpp  yolo11.cpp  yolo11.hpp  yolov5.cpp  yolov5.hpp  yolov8.cpp  yolov8.hpp
tools/: CMakeLists.txt
tools/crc/: README.md
tools/exiter/: README.md
tools/extended_kalman_filter/: README.md
tools/img_tools/: README.md
tools/logger/: README.md
tools/math_tools/: README.md
tools/pid/: README.md  pid.cpp
tools/plotter/: README.md
tools/ransac_sine_fitter/: README.md
tools/recorder/: README.md  recorder.cpp  recorder.hpp
tools/thread_pool/: README.md  thread_pool.hpp
tools/thread_safe_queue/: README.md
tools/trajectory/: README.md
tools/yaml/: README.md  yaml.hpp
(+87 files in other folders)
